# marketing-agents

./: .env.example  event_pipeline_results.json  main.py  pyproject.toml
config/: agent_prompts.yaml  loader.py  models.yaml
pipeline/: orchestrator.py
utils/: configurable_llm_client.py  experiment_models.py  prompt_loader.py  search.py
